[copy] changed text line breaks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="vignette">
     <h1>Ryan McLeod</h1>
-    <h2 class="intro">This is where a quirky series of traits describing me goes, the last of which is tastefully humorous.<br>Are you impressed yet? Excellent.<br>Jump monkey, jump!</h2>
+    <h2 class="intro">This is where a quirky series of traits describing<br/>me goes, the last of which is tastefully humorous.<br/>Are you impressed yet? Excellent.<br>Jump monkey, jump!</h2>
 
     <script type="text/javascript">
 
